# xtensor

./: meson.build  meson_options.txt
subprojects/: nlohmann_json.wrap  xsimd.wrap  xtl.wrap
